# DnD-Virtual-CardGame

./: .gitignore  CMakeLists.txt  DND-Brainstorm.drawio  README.md  main.c
Application-Code/: CMakeLists.txt  README.md  main.c
Application-Code/dependencies/: Application-Related.c  Application-Related.h  Data-Related.c  Data-Related.h  Debug-Related.c  Debug-Related.h  Player-Related.c  Player-Related.h
Documentation/: DND-Brainstorm.drawio
